tests/NormalTests/paczka1/fuzzy1/74786635.err
Error in line 10: hbWsMYT4 S964 63,5
Error in line 14: hbWsMYT4 A354 91,7
Error in line 1: G22aMRAYnrk S964 23,8
Error in line 6: S650 S340 51,1
Error in line 31: vHJoV5jiBXs S964 30,6
Error in line 28: nVVpRByxR A354 40,6
